Fri Mar 17 15:36:07 1995  Chris Provenzano (proven@mit.edu)

        * kadmin_inq.c, kadmin.c:
		Cast malloc() return value to shut compiler up.

Fri Mar 10 11:09:34 1995  Chris Provenzano (proven@mit.edu)

	* kadmin.c, kadmin_adr.c, kadmin_cpw.c, kadmin_done.c, kadmin_mod.c
	* kadmin_add.c, kadmin_cpr.c, kadmin_del.c, kadmin_inq.c, kadmin_msnd.c
		Use new calling convention for krb5_sendauth(), krb5_mk_priv(), 
		krb5_rd_priv(), krb5_mk_safe(), and krb5_rd_safe().

Thu Mar  2 12:24:25 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (ISODELIB): Remove reference to $(ISODELIB).

Wed Mar  1 16:29:19 1995  Theodore Y. Ts'o  <tytso@dcl>

	* configure.in: Remove ISODE_INCLUDE, replace check for -lsocket
		and -lnsl with WITH_NETLIB check.

Tue Feb 28 02:18:37 1995  John Gilmore  (gnu at toad.com)

	* *.c:  Avoid <krb5/...> and <com_err.h> includes.

Tue Feb 14 15:30:55 1995 Chris Provenzano  (proven@mit.edu)

        * kadmin.c Call krb5_sendauth() with new calling convention

Fri Feb 10 17:50:39 1995  Theodore Y. Ts'o  <tytso@dcl>

	* kadmin_msnd.c: Remove needless #include of <krb5/asn.1/encode.h>

Mon Feb 06 17:19:04 1995 Chris Provenzano  (proven@mit.edu)

        * kadmin.c: Removed krb5_keytype, changed krb5_enctype to
                krb5_enctype *, changed krb5_preauthtype to krb5_preauthtype *
                for krb5_get_in_tkt_with_password() rotuine.

Fri Feb  3 03:03:27 1995  John Gilmore  <gnu@cygnus.com>

	* kadmin.c (main):  Real live non-kludged argument parsing.
	Add -c option to specify ticket cache location (it really
	should just use a cache in memory in the process, but that
	isn't written yet).  Make some error messages more explicit!

Wed Jan 25 16:54:40 1995  Chris Provenzano (proven@mit.edu)

        * Removed all narrow types and references to wide.h and narrow.h

Fri Jan 13 15:23:47 1995  Chris Provenzano (proven@mit.edu)

    * Added krb5_context to all krb5_routines

Mon Oct  3 19:12:43 1994  Theodore Y. Ts'o  (tytso@dcl)
