@@ -30,7 +30,8 @@
 
 #include <sys/param.h>
 
-#include "krb5.h"
+#include "k5-int.h"
+#include "adm_defs.h"
 
 void decode_kadmind_reply();
 int print_status_message();
