@@ -29,6 +29,7 @@
 #include <com_err.h>
 
 #include <krb5.h>
+#include "adm_defs.h"
 
 void decode_kadmind_reply();
 int print_status_message();
